--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -9,8 +9,9 @@
 </div>
 <div class="container mb-navbar mt-header" data-controller="search">
   <h1>Latest Products</h1>
-  <%= form_with(url: items_path, method: :get, local: true, data: { turbo: false }) do |f| %>
+  <%= form_with(url: items_path, method: :get, class: "gc-form", local: true, data: { turbo: false }) do |f| %>
     <%= f.text_field :query,
+                      class: "form-control gc-form",
                       placeholder: "Search items...",
                       data: {
                         search_target: "input",
