Add ability for admin to add a new package. Change admin nav to include dropup menu for adding products and packages. Update ruby version to 3.3.5. Move cart and checkout actions and routes from pages controller to orders controller for better separation of concerns

--- a/app/views/pages/checkout.html.erb
+++ b/app/views/pages/checkout.html.erb
@@ -28,8 +28,8 @@
   </div>
   <%= form_with(model: @order, url: confirm_order_order_path(@order), method: :patch, local: true) do |form| %>
     <div class="mb-3 gc-form">
-      <%= form.text_field :address, class: "form-control gc-form", placeholder: "Enter delivery address", required: true %>
+      <%= form.text_field :address, class: "form-control gc-form mb-2", placeholder: "Enter delivery address", required: true %>
+      <%= form.submit "Confirm Order", class: "btn btn-success" %>
     </div>
-    <%= form.submit "Confirm Order", class: "btn btn-success" %>
   <% end %>
 </div>
