--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -6,10 +6,17 @@
 
     <div class="navbar-nav ms-auto f-flex align-items-center justify-content-between">
       <% if current_user.role == "admin" %>
-        <%= link_to "+ Product", new_product_path, class: "btn btn-success me-2" %>
-        <%= link_to "Orders", orders_path, class: "btn btn-info me-3" %>
+        <div class="nav-item dropup me-2">
+          <a href="#" class="btn btn-success" id="addDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Add
+          </a>
+          <div class="dropdown-menu dropdown-menu-center" aria-labelledby="addDropdown">
+            <%= link_to "New Product", new_product_path, class: "dropdown-item" %>
+            <%= link_to "New Package", new_package_path, class: "dropdown-item" %>
+          </div>
+        </div>
+        <%= link_to "Orders", orders_path, class: "btn btn-info me-2" %>
         <%= link_to "Chats", chats_path, class: "btn btn-warning me-3" %>
-
       <% else %>
         <%= link_to cart_path, class: "nav-link me-3" do %>
           <i class="fa-solid fa-cart-shopping fa-2xl"></i>
@@ -24,7 +31,6 @@
           <% unless current_user.role == "admin" %>
             <%= link_to "Chats", chats_path, class: "dropdown-item" %>
           <% end %>
-          <%= link_to "Cart", cart_path, class: "dropdown-item" %>
           <%= link_to "Account", account_path, class: "dropdown-item" %>
           <%= link_to "Logout", destroy_user_session_path, data: { turbo_method: :delete }, class: "dropdown-item" %>
         </div>
