--- a/app/views/items/_actions.html.erb
+++ b/app/views/items/_actions.html.erb
@@ -1,7 +1,13 @@
 <% if current_user&.role == "admin" %>
-  <%= link_to "Edit", edit_product_path(item.itemable), class: "btn btn-success" %>
-  <%= link_to "Delete", product_path(item.itemable), class: "btn btn-danger",
-              data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this product?" } %>
+  <% if item.itemable_type == "Product" %>
+    <%= link_to "Edit", edit_product_path(item.itemable), class: "btn btn-success" %>
+    <%= link_to "Delete", product_path(item.itemable), class: "btn btn-danger",
+                data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this product?" } %>
+  <% elsif item.itemable_type == "Package" %>
+    <%= link_to "Edit", edit_package_path(item.itemable), class: "btn btn-success" %>
+    <%= link_to "Delete", package_path(item.itemable), class: "btn btn-danger",
+                data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this package?" } %>
+  <% end %>
 <% else %>
   <%= button_to 'Add to Cart', order_items_path(item_id: item.id), method: :post, class: "btn btn-success" %>
 <% end %>
