--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="container my-5">
 
     <div class="d-flex align-items-center mb-2">
-    <%= link_to products_path do %>
+    <%= link_to :back do %>
       <i class="fas fa-arrow-left me-2"></i>
     <% end %>
     <h1 class="m-0"><%= @product.name %></h1>
