--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -5,7 +5,6 @@
   background-color: transparent;
 
   ::placeholder {
-    color: white;
-    opacity: 0.5;
+    color: rgba(255, 255, 255, 0.5);
   }
 }
