--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,18 +1,28 @@
 <div class="container my-5">
-  <h2>Sign up</h2>
+
+  <div class="d-flex align-items-center mb-3">
+    <%= link_to :back do %>
+      <i class="fas fa-arrow-left me-2"></i>
+    <% end %>
+    <h1 class="m-0">Sign up</h1>
+  </div>
 
   <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-    <%= f.error_notification %>
+    <% if resource.errors.any? %>
+      <div class="alert alert-danger">
+        <ul>
+          <% resource.errors.full_messages.each do |msg| %>
+            <li><%= msg %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
 
     <div class="form-inputs">
       <%= f.input :username,
                   required: true,
                   autofocus: true,
                   input_html: { autocomplete: "username" } %>
-      <%= f.input :address,
-                  required: true,
-                  autofocus: true,
-                  input_html: { autocomplete: "address" } %>
       <%= f.input :email,
                   required: true,
                   autofocus: true,
@@ -31,5 +41,7 @@
     </div>
   <% end %>
 
-  <%= render "devise/shared/links" %>
+  <div class="text-center">
+    <%= render "devise/shared/links" %>
+  </div>
 </div>
