--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,37 +1,5 @@
-<div class="container mb-navbar mt-5">
-  <div class="d-flex align-items-center mb-3">
-    <%= link_to :back do %>
-      <i class="fas fa-arrow-left me-2"></i>
-    <% end %>
-    <h1 class="m-0">All Orders</h1>
-  </div>
-
-  <%= form_tag orders_path, method: :get do %>
-    <%= select_tag :status, options_for_select(Order.statuses.keys, params[:status]), prompt: "Filter by Status" %>
-    <%= submit_tag "Filter" %>
-  <% end %>
-
-  <div>
-    <div class="d-flex border-bottom fw-bold justify-content-between border-bottom py-3">
-      <p class="mb-0">ID</p>
-      <p class="mb-0">CREATED</p>
-      <p class="mb-0">STATUS</p>
-    </div>
-    <div>
-      <% @orders.each do |order| %>
-        <div class="order-card d-flex align-items-center py-3 justify-content-between">
-          <p><%= order.id %></p>
-          <p><%= order.created_at.strftime("%d/%m/%Y %H:%M") %></p>
-          <div class="d-flex">
-            <%= form_for order do |f| %>
-              <div class="d-flex flex-column gap-2">
-                <%= f.select :status, Order.statuses.keys %>
-                <%= f.submit "Update", class: "btn btn-primary" %>
-              </div>
-            <% end %>
-          </div>
-        </div>
-      <% end %>
-    </div>
-  </div>
-</div>
+<% if current_user.admin? %>
+  <%= render 'admin_orders' %>
+<% else %>
+  <%= render 'customer_orders' %>
+<% end %>
