--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -30,6 +30,7 @@
         <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
           <% unless current_user.role == "admin" %>
             <%= link_to "Chats", chats_path, class: "dropdown-item" %>
+            <%= link_to "My Orders", orders_path, class: "dropdown-item" %>
           <% end %>
           <%= link_to "Account", account_path, class: "dropdown-item" %>
           <%= link_to "Logout", destroy_user_session_path, data: { turbo_method: :delete }, class: "dropdown-item" %>
