feature: add rating model for product rating and comments. add mobile responsivity, front end improvements, add rating to seeds

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -11,12 +11,6 @@
     }
 
   }
-
-  img {
-    width: 100%;
-    height: 150px;
-    object-fit: cover;
-  }
 }
 
 #item-price {
@@ -26,9 +20,15 @@
 
 .products-grid {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   grid-gap: 1rem;
-}
+ }
+ 
+  @media (max-width: 768px) {
+  .products-grid {
+    grid-template-columns: 1fr;
+  }
+ }
 
 .cart-product-card {
   display: flex;
