--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,5 @@
 <div class="navbar navbar-expand fixed-bottom bg-black border-top" data-bs-theme="dark">
-  <div class="container-fluid">
+  <div class="container-fluid px-3 lg-px-5">
     <%= link_to items_path, class: "navbar-brand" do %>
       <%= image_tag "goldcloud_logo.png", style: "width: 70px;" %>
     <% end %>
