--- a/app/views/items/_items.html.erb
+++ b/app/views/items/_items.html.erb
@@ -1,14 +1,21 @@
 <div class="products-grid my-4">
   <% @items.each do |item| %>
-    <%= link_to item_path(item) do %>
-      <div class="item-card">
-        <%# = image_tag item.primary_photo_url, alt: item.itemable.name %>
-        <%= image_tag item.primary_photo_url %>
-        <div class="item-infos">
-          <p title="<%= item.itemable.name %>"><%= truncate(item.itemable.name, length: 20, omission: '...') %></p>
-          <p id="item-price">R<%= item.itemable.price.round%><%="/g" if item.itemable_type == 'Product' %></p>
-        </div>
+  <%= link_to item_path(item) do %>
+    <div class="item-card">
+      <div style="height: 180px">  <!-- Create a fixed-height container -->
+        <%= image_tag item.primary_photo_url, 
+            class: "w-100 h-100 object-fit-cover", # Changed h-2 to h-100
+            alt: item.itemable.name %>
       </div>
-    <% end %>
+      <div class="item-infos">
+        <p title="<%= item.itemable.name %>">
+          <%= truncate(item.itemable.name, length: 20, omission: '...') %>
+        </p>
+        <p id="item-price">
+          R<%= item.itemable.price.round%><%= "/g" if item.itemable_type == 'Product' %>
+        </p>
+      </div>
+    </div>
   <% end %>
+<% end %>
 </div>
