--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -6,7 +6,7 @@
     <h1 class="m-0">Order #<%= @order.id %> Details</h1>
   </div>
 
-  <div class="card">
+  <div class="card bg-black text-white">
     <div class="card-body">
       <div class="row">
         <div class="col-md-6">
@@ -18,9 +18,9 @@
           <p><strong>Delivery Address: </strong><%= @order.address %></p>
         </div>
       </div>
-            <h5 class="card-title">Order Items</h5>
+            <h5 class="card-title mt-3">Order Items</h5>
       <div class="table-responsive">
-        <table class="table">
+        <table class="table table-dark">
           <thead>
             <tr>
               <th>Item</th>
